fixed css linking problem for login.html, fixing spacing issue on landing

--- a/frontend/scss/landing.scss
+++ b/frontend/scss/landing.scss
@@ -151,9 +151,11 @@ a.nav-item:hover {
 .landing-col {
     display: flex;
 }
-
+.light-grey-bg {
+        background-color: #eee;
+}
 .content-section {
-    background-color: #eee;
+
     padding: 50px 0px;
 }
 
